--- a/backend/src/main/resources/templates/login.html
+++ b/backend/src/main/resources/templates/login.html
@@ -26,7 +26,7 @@
   </div>
   </form>
   <p>
-    Don't have an account? <a th:href="@{/register}">Register</a>  <!-- 新規アカウント作成ページへのリンクを追加 -->
+    Don't have an account? <a th:href="@{/users/signup}">Sign Up</a>  <!-- 新規アカウント作成ページへのリンクを追加 -->
   </p>
 </body>
 </html>
