--- a/backend/src/main/resources/templates/index.html
+++ b/backend/src/main/resources/templates/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="ja" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}">
 <head>
   <title>Home</title>
 </head>
 <body>
-<h1 th:if="${user}">ようこそ、<span th:text="${user.familyName + ' ' + user.firstName}"></span>さん！</h1>
-<h1 th:unless="${user}">ようこそ、名無しさん</h1>
-
-<p>ログインに成功しました！</p>
-<p>このページは認証されたユーザーのみがアクセスできます。</p>
-
-<div style="margin-top: 20px;">
-  <form th:action="@{/logout}" method="post" style="display: inline;">
-    <button type="submit">Logout</button>
-  </form>
+<div layout:fragment="content">
+  <h1 th:if="${user}">ようこそ、<span th:text="${user.familyName + ' ' + user.firstName}"></span>さん！</h1>
+  <h1 th:unless="${user}">ようこそ、名無しさん</h1>
+  <p>ログインに成功しました！</p>
+  <p>このページは認証されたユーザーのみがアクセスできます。</p>
 </div>
 </body>
 </html>
