--- a/backend/src/main/resources/templates/login.html
+++ b/backend/src/main/resources/templates/login.html
@@ -1,32 +1,23 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-  <meta charset="UTF-8">
-  <title>Login</title>
-</head>
-<body>
-<h2>Login Page</h2>
-
+<html lang="ja" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout}">
+<div layout:fragment="content">
+  <h2>ログイン</h2>
   <!-- エラーメッセージの表示 -->
   <div th:if="${param.error}" style="color: red; margin-bottom: 10px;">
     <p>メールアドレスまたはパスワードが正しくありません。</p>
   </div>
+  <form th:action="@{/login}" method="post">
 
-  <form action="#" th:action="@{/login}" method="post">
-  <div>
-    <label for="mail">Mail Address:</label>
-    <input type="email" id="mail" name="mail" required />
-  </div>
-  <div>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required />
-  </div>
-  <div>
-    <button type="submit">Login</button>
-  </div>
+    <div>
+      <label for="mail">メールアドレス: </label>
+      <input type="email" id="mail" name="mail" required>
+    </div>
+    <div>
+      <label for="password">パスワード:</label>
+      <input type="password" id="password" name="password" required />
+    </div>
+    <button type="submit">ログイン</button>
   </form>
-  <p>
-    Don't have an account? <a th:href="@{/users/signup}">Sign Up</a>  <!-- 新規アカウント作成ページへのリンクを追加 -->
-  </p>
-</body>
+  <p>サウナ〜でない方は <a th:href="@{/users/signup}">新規登録</a></p>
+</div>
 </html>
