--- a/backend/src/main/resources/templates/fortune.html
+++ b/backend/src/main/resources/templates/fortune.html
@@ -2,7 +2,7 @@
 <html lang="ja" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout}">
 <div layout:fragment="content">
     <h2>今日のサウナを占おう！</h2>
-    <img src="/images/saunas.jpg" alt="サウナイメージ" style="max-width:100%; border-radius:12px;">
+    <img src="/images/sauna.jpg" alt="サウナイメージ" style="max-width:100%; border-radius:12px;">
     <form th:action="@{/fortune/result}" method="post">
         <button type="submit">占う！</button>
     </form>
