--- a/backend/src/main/resources/templates/signup.html
+++ b/backend/src/main/resources/templates/signup.html
@@ -15,7 +15,7 @@
     </div>
 
     <div>
-      <label>姓（ふりがな）:
+      <label>セイ:
         <input type="text" th:field="*{familyNameRuby}" required>
       </label>
     </div>
@@ -27,7 +27,7 @@
     </div>
 
     <div>
-      <label>名（ふりがな）:
+      <label>メイ:
         <input type="text" th:field="*{firstNameRuby}" required>
       </label>
     </div>
