--- a/backend/src/main/resources/templates/login.html
+++ b/backend/src/main/resources/templates/login.html
@@ -10,11 +10,11 @@
 
     <div>
       <label for="mail">メールアドレス: </label>
-      <input type="email" id="mail" name="mail" required>
+      <input type="email" id="mail" name="mail" required maxlength="255">
     </div>
     <div>
       <label for="password">パスワード:</label>
-      <input type="password" id="password" name="password" required />
+      <input type="password" id="password" name="password" required  minlength="8" maxlength="20" pattern="^[a-zA-Z0-9]+$" title="パスワードは半角英数字で入力してください。">
     </div>
     <button type="submit">ログイン</button>
   </form>
