--- a/backend/src/main/resources/templates/signup.html
+++ b/backend/src/main/resources/templates/signup.html
@@ -4,43 +4,57 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout}">
 
+<head>
+  <style>
+    .error-message {
+      color: #d82b2b;
+      font-size: 0.9em;
+      margin-top: 4px;
+    }
+    .is-invalid {
+      border: 1px solid #d82b2b;
+      background-color: #fff5f5;
+    }
+  </style>
+</head>
+
 <div layout:fragment="content">
   <h2>新規登録</h2>
 
   <form th:action="@{/users/create}" method="post" th:object="${createUserViewModel}">
     <div>
       <label>姓:
-        <input type="text" th:field="*{familyName}" required>
+        <input type="text" th:field="*{familyName}" required maxlength="20">
       </label>
     </div>
 
     <div>
       <label>セイ:
-        <input type="text" th:field="*{familyNameRuby}" required>
+        <input type="text" th:field="*{familyNameRuby}" required maxlength="40" pattern="^[ァ-ヶー]+$" title="全角カタカナで入力してください。">
       </label>
     </div>
 
     <div>
       <label>名:
-        <input type="text" th:field="*{firstName}" required>
+        <input type="text" th:field="*{firstName}" required maxlength="20">
       </label>
     </div>
 
     <div>
       <label>メイ:
-        <input type="text" th:field="*{firstNameRuby}" required>
+        <input type="text" th:field="*{firstNameRuby}" required maxlength="40" pattern="^[ァ-ヶー]+$" title="全角カタカナで入力してください。">
       </label>
     </div>
 
     <div>
       <label>メールアドレス:
-        <input type="email" th:field="*{mail}" required>
+        <input type="email" th:field="*{mail}" required maxlength="255">
       </label>
     </div>
 
     <div>
       <label>パスワード:
-        <input type="password" th:field="*{password}" required>
+        <input type="password" id="password" th:field="*{password}" required minlength="8" maxlength="20" pattern="^[a-zA-Z0-9]+$" title="パスワードは半角英数字で入力してください。">
       </label>
     </div>
 
