--- a/backend/src/main/resources/templates/fortune.html
+++ b/backend/src/main/resources/templates/fortune.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout}">
 <div layout:fragment="content">
-    <h2>今日のサウナを占おう！</h2>
+    <h2><span th:text="${username}"></span>さん、今日のサウナを占おう！</h2>
     <img src="/images/sauna.jpg" alt="サウナイメージ" style="max-width:100%; border-radius:12px;">
     <form th:action="@{/fortune/result}" method="post">
         <button type="submit">占う！</button>
