--- a/backend/src/main/resources/templates/signup.html
+++ b/backend/src/main/resources/templates/signup.html
@@ -21,7 +21,7 @@
 <div layout:fragment="content">
   <h2>新規登録</h2>
 
-  <form th:action="@{/users/create}" method="post" th:object="${createUserViewModel}">
+  <form th:action="@{/users/create}" method="post" th:object="${userViewModel}">
     <div>
       <label>姓:
         <input type="text" th:field="*{familyName}" required maxlength="20">
